Déplacement dans répétoire public file + image correction affichage navbar au dessus de collapse ouvert

--- a/src/_components/Header/header.scss
+++ b/src/_components/Header/header.scss
@@ -8,6 +8,7 @@
     align-items: center;
     gap: 30px;
     position: fixed;
+    z-index: 3;
     &__link  a {
         color: white;
         font-size: 16px;
